ダウンロードするファイル名を編集できるように変更

--- a/src/view/page-generator.html
+++ b/src/view/page-generator.html
@@ -9,10 +9,15 @@
       #content {
         border: solid 1px #CCCCCC;
       }
+      #title_form {
+        width: 90%;
+      }
     </style>
   </head>
   <body>
     <a id="download_html" download="page.html" href="#">Download</a>
+    <label for="title_form">as title: </label>
+    <input type="text" id="title_form" />
     <div id="content"></div>
   </body>
 </html>
